--- a/Prog2_11.ipynb
+++ b/Prog2_11.ipynb
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/mikeneko-cat/Prog2_11th/blob/main/Prog2_11.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jejejenojiei/Prog2_11th/blob/main/Prog2_11.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -4238,8 +4238,8 @@
       "source": [
         "第181問\n",
         "次の問題に答えなさい\n",
-        "\n",
-        "(ここから以降に自作問題を書いてください)"
+        "(ここから以降に自作問題を書いてください)\n",
+        "入力された月に対し、その月が何日まであるかを返すプログラムを作成しなさい"
       ]
     },
     {
@@ -4248,7 +4248,10 @@
         "id": "8c58yne2u5Ge"
       },
       "source": [
-        "# ここに自作問題の回答（pythonプログラム）を書いてください"
+        "# ここに自作問題の回答（pythonプログラム）を書いてください\n",
+        "day=[31,28,31,30,31,30,31,31,30,31,30,31]\n",
+        "a=int(input(\"何月？：\"))\n",
+        "print(str(a),\"月は\",day[a-1],\"日まであります\")"
       ],
       "execution_count": null,
       "outputs": []
@@ -5485,7 +5488,7 @@
         "# ここに自作問題の回答（pythonプログラム）を書いてください\n",
         "print(2*3)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
